#6797: Fix alert coloring in dark mode

--- a/netbox/project-static/styles/theme-dark.scss
+++ b/netbox/project-static/styles/theme-dark.scss
@@ -43,6 +43,10 @@ $mark-bg: #fcf8e3;
 $link-color: $blue-200;
 $link-hover-color: $blue-100;
 
+// Alerts
+$alert-bg-scale: -5%;
+$alert-border-scale: -20%;
+
 // Tables
 $table-color: $gray-100;
 $table-border-color: $border-color;
